Auto IRC Bot 3.0: Change Log
------------------------------------------------------------------

3.0 Indev
==================================================================
    * Rewrote the socket engine. This should fix random timeouts.
    * Added IsItUp module.
    * Added user:net for network-specific user blocks.
    * Bug fix: Fixed broken no-parameter config blocks.
    * Added core command SHUTDOWN.
    * Added core command MODRELOAD.
    * Added core command MODUNLOAD.
    * Added core command MODLOAD.
    * Added Weather module.
    * Added Calc module.
    * Fixed the NAME,VER,SVER,REV,RSTAGE constants.
    * Added a CTCP VERSION reply.
    * Created Core::IRC.
    * Added Bit.ly module.

3.0 Alpha 1
==================================================================
    * Added mod_exists() to API::Std.
    * Added SASL support with modules/SASLAuth.
    * Added mdelete() to DB/Flatfile.
    * Added topic() to API::IRC.
    * Added has_priv() to API::Std.
    * Finished the host-based privilege/permission system.
    * Added hook on_preconnect, this comes before USER (after PASS).
    * Added match_mask() to API::IRC and match_user() to API::Std,
      match_user checks config user:mask to find a user block, if
      a match is found, the configured username is returned.
    * Added rchook_add() and rchook_del() to API::Std.
    * Parse NOTICE and added hook on_notice.
    * Added hooks on_uprivmsg and on_cprivmsg.
    * Module names are now case sensitive.
    * Added config option module for auto-loading a module.
    * Fixed a bug in API::Log that caused invalid months.
    * Changed how command data is passed to fix a bug.
    * Removed dependency Async.
    * Rewrote the socket engine.
    * Added cmd_add|del|run() to API::Std for commands.
    * Parse PRIVMSG.
    * Enabled ./install features are now stored in $Auto::ENFEAT.
    * Added --enable-sasl option to ./install for enabling SASL.
    * Added names() to API::IRC which sends NAMES.