@@ -3,6 +3,7 @@ Auto IRC Bot 3.0: Change Log
 
 3.0 Indev
 ==================================================================
+    * Added EightBall module.
     * Rewrote the socket engine. This should fix random timeouts.
     * Added IsItUp module.
     * Added user:net for network-specific user blocks.
